--- a/redbot/core/commands/locales/fr-FR.po
+++ b/redbot/core/commands/locales/fr-FR.po
@@ -173,9 +173,9 @@ msgid "\n"
 "    (Help!)\n"
 "    "
 msgstr "\n"
-"    I need somebody\n"
-"    (Help) not just anybody\n"
-"    (Help) you know I need someone\n"
-"    (Help!)\n"
+"J'ai besoin de quelqu'un\n"
+"(Aide) pas n'importe qui\n"
+"(Aide) tu sais que j'ai besoin de quelqu'un\n"
+"(Aide!)\n"
 "    "
 
